tdf#97619: update to match selection fixed

If style to update is part of the request then use that style
instead of the currently selected style to update _and_ apply it.

Change-Id: I49537ba3a116253c4a54c2b70eded33e12d0b00c
Reviewed-on: https://gerrit.libreoffice.org/23083
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>